[package]
name = "spin"
version = "0.1.0"
authors = ["Georg Brandl <g.brandl@fz-juelich.de>"]
license = "GPL-2.0"

[lib]
name = "spin"

[[bin]]
name = "spin_db"
path = "src/db/main.rs"

[[bin]]
name = "spin_srv"
path = "src/srv_main.rs"

[dependencies]
log = "*"
url = "*"
zmq = "*"
fnv = "*"
time = "*"
toml = "*"
prost = "*"
bytes = "*"
mlzlog = "*"
argparse = "*"
daemonize = "*"
lazy_static = "*"

[dependencies.spin_proto]
path = "src/proto"
