[package]
name = "spin_core"
version = "0.1.0"
authors = ["Georg Brandl <g.brandl@fz-juelich.de>"]
license = "GPL-2.0"
edition = "2018"

[lib]
name = "spin"
path = "lib.rs"

[dependencies]
log = "*"
url = "*"
zmq = "*"
toml = "*"
prost = "*"
regex = "*"
fxhash = "*"
mlzlog = "*"
daemonize = "*"
structopt = "*"
parking_lot = "*"
lazy_static = "*"

[dependencies.spin_proto]
path = "../proto"
